force-app/main/default/objects/Account/fields/MSA__c.field-meta.xml
<CustomField>
    <fullName>MSA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this field denotes an MSA has been signed and executed with this account. If unchecked, this field denotes the MSA has not been signed with this account.</description>
    <inlineHelpText>If checked, this field denotes an MSA has been signed and executed with this account. If unchecked, this field denotes the MSA has not been signed with this account.</inlineHelpText>
    <label>MSA</label>
    <type>Checkbox</type>
</CustomField>