force-app/main/default/objects/Account/fields/NDA__c.field-meta.xml
<CustomField>
    <fullName>NDA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this field denotes an NDA has been signed and executed with this account. If unchecked, this field denotes the NDA has not been signed with this account.</description>
    <inlineHelpText>If checked, this field denotes an NDA has been signed and executed with this account. If unchecked, this field denotes the NDA has not been signed with this account.</inlineHelpText>
    <label>NDA</label>
    <type>Checkbox</type>
</CustomField>