force-app/main/default/objects/Account/fields/No_Known_Contact__c.field-meta.xml
<CustomField>
    <fullName>No_Known_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to delineate that, at point of account creation, no known customer contact is known.</description>
    <inlineHelpText>Mark as true if the account does not have a known contact.</inlineHelpText>
    <label>No Known Contact</label>
    <type>Checkbox</type>
</CustomField>