force-app/main/default/objects/Account/fields/Notable_non_ATG_Clients__c.field-meta.xml
<CustomField>
    <fullName>Notable_non_ATG_Clients__c</fullName>
    <description>A field for notable non-ATG clients, created at the request of Alliances for use on the Partner Account page Layout</description>
    <inlineHelpText>A field for notable non-ATG clients.</inlineHelpText>
    <label>Notable non-ATG Clients</label>
    <type>TextArea</type>
</CustomField>