force-app/main/default/objects/Account/fields/Number_of_Closed_Won_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Closed_Won_Opportunities__c</fullName>
    <label>Number of Closed Won Opportunities</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>contains</operation>
        <value>Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>