force-app/main/default/objects/Account/fields/Number_of_Licenses_XactlyIncent__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Licenses_XactlyIncent__c</fullName>
    <inlineHelpText>Number of Xactly incent licenses this customer has purchased</inlineHelpText>
    <label>Number of Licenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>