force-app/main/default/objects/Account/fields/NZC_Account_External_ID__c.field-meta.xml
<CustomField>
    <fullName>NZC_Account_External_ID__c</fullName>
    <description>Created to map Contact and Supplier to Account</description>
    <externalId>true</externalId>
    <label>NZC Account External ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>