force-app/main/default/objects/Account/fields/Opportunity_at_Proposal_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_at_Proposal_Stage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox on the account to be updated via workflow rule when a related opportunity reaches Proposal Stage or greater.</description>
    <label>Opportunity at Proposal Stage</label>
    <type>Checkbox</type>
</CustomField>