force-app/main/default/objects/Account/fields/Opportunity_Closed_Lost__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Closed_Lost__c</fullName>
    <inlineHelpText>The sum of the dollar amount of all related opportunities in the Closed Lost stage</inlineHelpText>
    <label>Opportunity Closed Lost</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Lost, Dead, On Hold</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>