force-app/main/default/objects/Account/fields/Opportunity_Closed_Won__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Closed_Won__c</fullName>
    <inlineHelpText>The sum of the dollar amount of all related opportunities in a Closed Won stage</inlineHelpText>
    <label>Opportunity Closed Won</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>contains</operation>
        <value>Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>