force-app/main/default/objects/Account/fields/Opportunity_Open__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Open__c</fullName>
    <inlineHelpText>The sum of the dollar amount of all related opportunities in an open stage</inlineHelpText>
    <label>Opportunity Open</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>notEqual</operation>
        <value>Closed Won, Closed Done, Closed Lost, Dead, On Hold, Won, Lost, Client Withdraw, Cognizant Withdraw, Duplicate, Partial Win</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>