force-app/main/default/objects/Account/fields/Opportunity_Total__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Total__c</fullName>
    <inlineHelpText>The sum of the dollar amount of all related opportunities, regardless of stage</inlineHelpText>
    <label>Opportunity Total</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>