force-app/main/default/objects/Account/fields/OSM_Special_Scenarios__c.field-meta.xml
<CustomField>
    <fullName>OSM_Special_Scenarios__c</fullName>
    <label>OSM Special Scenarios</label>
    <length>200</length>
    <type>Text</type>
</CustomField>