force-app/main/default/objects/Account/fields/OSM_Use_Case_XactlyOSM__c.field-meta.xml
<CustomField>
    <fullName>OSM_Use_Case_XactlyOSM__c</fullName>
    <label>OSM Use Case</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Territory</fullName>
            </value>
            <value>
                <fullName>GTM</fullName>
            </value>
            <value>
                <fullName>Quotas</fullName>
            </value>
            <value>
                <fullName>Credits</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>