force-app/main/default/objects/Account/fields/Outbound_Integration_2_XactlyIntegration__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Integration_2_XactlyIntegration__c</fullName>
    <label>Outbound Integration #2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Outbound HR</fullName>
            </value>
            <value>
                <fullName>Outbound Reporting</fullName>
            </value>
            <value>
                <fullName>Outbound Quota</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>