force-app/main/default/objects/Account/fields/Owner_to_Add_Team_Members_in_CRM__c.field-meta.xml
<CustomField>
    <fullName>Owner_to_Add_Team_Members_in_CRM__c</fullName>
    <inlineHelpText>do not change</inlineHelpText>
    <label>Owner to Add Team Members in CRM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Partner</fullName>
                <default>true</default>
                <label>Client Partner</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>