force-app/main/default/objects/Account/fields/Partner_Domain__c.field-meta.xml
<CustomField>
    <fullName>Partner_Domain__c</fullName>
    <label>Partner Domain</label>
    <length>50</length>
    <type>Text</type>
</CustomField>