force-app/main/default/objects/Account/fields/Partnership_Tier_2__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Tier_2__c</fullName>
    <description>Updated partnership tier field to capture free form text responses to what tier the partnership</description>
    <inlineHelpText>Capture what tier this partnership exists</inlineHelpText>
    <label>Partnership Tier</label>
    <type>TextArea</type>
</CustomField>