force-app/main/default/objects/Account/fields/Partnership_Type_2__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Type_2__c</fullName>
    <label>Partnership Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strategic</fullName>
            </value>
            <value>
                <fullName>Opportunistic</fullName>
            </value>
            <value>
                <fullName>Explorative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>