force-app/main/default/objects/Account/fields/Partnership_Type__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Type__c</fullName>
    <label>Partnership Type - Deprecate</label>
    <length>50</length>
    <type>Text</type>
</CustomField>