force-app/main/default/objects/Account/fields/People_Soft_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>People_Soft_Account_ID__c</fullName>
    <description>Account ID generated by inputting data into People Soft</description>
    <externalId>true</externalId>
    <inlineHelpText>Account ID generated upon creation of Account in People Soft and is populated by ATG Operations team</inlineHelpText>
    <label>People Soft Account ID</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>