force-app/main/default/objects/Account/fields/Pratice_Delivery_Leader__c.field-meta.xml
<CustomField>
    <fullName>Pratice_Delivery_Leader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A field to input the practice/delivery leader.</description>
    <inlineHelpText>A field to input the practice/delivery leader.</inlineHelpText>
    <label>Practice/Delivery Leader</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>