force-app/main/default/objects/Account/fields/Project_Team_Members__c.field-meta.xml
<CustomField>
    <fullName>Project_Team_Members__c</fullName>
    <inlineHelpText>Members of the project teams that have supported Xaclty work for this customer</inlineHelpText>
    <label>Xactly Project Team Members</label>
    <length>255</length>
    <type>Text</type>
</CustomField>