force-app/main/default/objects/Account/fields/Reference_Account_Xactly__c.field-meta.xml
<CustomField>
    <fullName>Reference_Account_Xactly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>created for Xactly Account capture</description>
    <label>Reference Account</label>
    <type>Checkbox</type>
</CustomField>