force-app/main/default/objects/Account/fields/Salesforce_2019_Rep_Unknown__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_2019_Rep_Unknown__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Salesforce 2019 Rep Unknown</label>
    <type>Checkbox</type>
</CustomField>