force-app/main/default/objects/Account/fields/SBU1__c.field-meta.xml
<CustomField>
    <fullName>SBU1__c</fullName>
    <description>SBU1 for People Soft Account Creation</description>
    <inlineHelpText>do not change</inlineHelpText>
    <label>SBU1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ATG</fullName>
                <default>true</default>
                <label>ATG</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>