force-app/main/default/objects/Account/fields/SSO__c.field-meta.xml
<CustomField>
    <fullName>SSO__c</fullName>
    <label>SSO?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes - ADFS</fullName>
            </value>
            <value>
                <fullName>Yes - Okta</fullName>
            </value>
            <value>
                <fullName>Yes - Azure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>