force-app/main/default/objects/Account/fields/Sub_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Sub_Vertical__c</fullName>
    <description>Sub Vertical for People Soft Account Creation</description>
    <inlineHelpText>do not change</inlineHelpText>
    <label>Sub Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Others</fullName>
                <default>true</default>
                <label>Others</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>