force-app/main/default/objects/Account/fields/Sync_Type_XactlyForecasting__c.field-meta.xml
<CustomField>
    <fullName>Sync_Type_XactlyForecasting__c</fullName>
    <label>Sync Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>