force-app/main/default/objects/Account/fields/Target_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Target_Revenue__c</fullName>
    <description>A field for target revenue for the year, made at the request of Alliances for use on the Partner Account layout</description>
    <inlineHelpText>A field for target revenue for the year.</inlineHelpText>
    <label>Target Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>