force-app/main/default/objects/Account/fields/Trigger_XactlyIntegration__c.field-meta.xml
<CustomField>
    <fullName>Trigger_XactlyIntegration__c</fullName>
    <label>Trigger #</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trigger1</fullName>
            </value>
            <value>
                <fullName>Trigger2</fullName>
            </value>
            <value>
                <fullName>Trigger3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>