force-app/main/default/objects/Account/fields/Types_XactlyIntegration__c.field-meta.xml
<CustomField>
    <fullName>Types_XactlyIntegration__c</fullName>
    <inlineHelpText>Type of Integration</inlineHelpText>
    <label>Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SFTP Flat File</fullName>
            </value>
            <value>
                <fullName>SFTP Reference File</fullName>
            </value>
            <value>
                <fullName>Lookup Table Reference File</fullName>
            </value>
            <value>
                <fullName>SFDC</fullName>
            </value>
            <value>
                <fullName>Snowflake</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>