force-app/main/default/objects/Account/fields/Unique_Configurations_XactlyIncent_c__c.field-meta.xml
<CustomField>
    <fullName>Unique_Configurations_XactlyIncent_c__c</fullName>
    <label>Unique Configurations</label>
    <length>200</length>
    <type>Text</type>
</CustomField>