force-app/main/default/objects/Account/fields/Vendor_Awareness__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Awareness__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vendor Awareness</label>
    <type>Checkbox</type>
</CustomField>