force-app/main/default/objects/Account/fields/Vertical_Market__c.field-meta.xml
<CustomField>
    <fullName>Vertical_Market__c</fullName>
    <description>Used to track vertical markets.</description>
    <inlineHelpText>For additional information use the &quot;Vertical Market Help&quot; link in the Custom Link section.</inlineHelpText>
    <label>Vertical Market</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BFS</fullName>
            </value>
            <value>
                <fullName>INSURANCE</fullName>
            </value>
            <value>
                <fullName>CMT</fullName>
            </value>
            <value>
                <fullName>MLEU</fullName>
            </value>
            <value>
                <fullName>DIVERSIFIED</fullName>
            </value>
            <value>
                <fullName>INTERNAL</fullName>
            </value>
            <value>
                <fullName>Government &amp; Public Sector</fullName>
            </value>
            <value>
                <fullName>Communications Media</fullName>
            </value>
            <value>
                <fullName>Healthcare- Plans &amp; Providers</fullName>
            </value>
            <value>
                <fullName>Life Sciences</fullName>
            </value>
            <value>
                <fullName>Retail &amp; Consumer Goods</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
                <label>TECHNOLOGY</label>
            </value>
            <value>
                <fullName>Travel &amp; Hospitality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>