force-app/main/default/objects/Account/fields/Verticals_Served__c.field-meta.xml
<CustomField>
    <fullName>Verticals_Served__c</fullName>
    <description>Verticals Served for Partner accounts</description>
    <inlineHelpText>Verticals Served for Partner Accounts</inlineHelpText>
    <label>Verticals Served</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BFS</fullName>
            </value>
            <value>
                <fullName>INSURANCE</fullName>
            </value>
            <value>
                <fullName>HEALTHCARE</fullName>
            </value>
            <value>
                <fullName>LSCIENCES</fullName>
            </value>
            <value>
                <fullName>RETAIL</fullName>
            </value>
            <value>
                <fullName>T&amp;H</fullName>
            </value>
            <value>
                <fullName>MLEU</fullName>
            </value>
            <value>
                <fullName>COMM</fullName>
            </value>
            <value>
                <fullName>TECHNOLOGY</fullName>
            </value>
            <value>
                <fullName>GVT SECTOR</fullName>
            </value>
            <value>
                <fullName>DIVERSIFIED</fullName>
            </value>
            <value>
                <fullName>INTERNAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>