force-app/main/default/objects/Account/fields/Xactly_Co_Selling_Partner__c.field-meta.xml
<CustomField>
    <fullName>Xactly_Co_Selling_Partner__c</fullName>
    <formula>INCLUDES(Co_Selling_Partners__c, &quot;Xactly&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Xactly Co-Selling Partner</label>
    <type>Checkbox</type>
</CustomField>