force-app/main/default/objects/Account/fields/Xactly_Forecasting__c.field-meta.xml
<CustomField>
    <fullName>Xactly_Forecasting__c</fullName>
    <formula>Includes( Xactly_Products__c , &quot;Forecasting&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Xactly Forecasting?</label>
    <type>Checkbox</type>
</CustomField>