force-app/main/default/objects/Account/fields/Xactly_Incent__c.field-meta.xml
<CustomField>
    <fullName>Xactly_Incent__c</fullName>
    <formula>INCLUDES(Xactly_Products__c , &quot;Incent&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Xactly Incent</label>
    <type>Checkbox</type>
</CustomField>