force-app/main/default/objects/Account/fields/Xactly_OSM__c.field-meta.xml
<CustomField>
    <fullName>Xactly_OSM__c</fullName>
    <formula>Includes( Xactly_Products__c , &quot;OSM&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Xactly OSM?</label>
    <type>Checkbox</type>
</CustomField>