force-app/main/default/objects/Account/fields/Xactly_Products__c.field-meta.xml
<CustomField>
    <fullName>Xactly_Products__c</fullName>
    <inlineHelpText>Xactly products this customer has purchased</inlineHelpText>
    <label>Xactly Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Analytics</fullName>
            </value>
            <value>
                <fullName>Connect</fullName>
            </value>
            <value>
                <fullName>Forecasting</fullName>
            </value>
            <value>
                <fullName>Incent</fullName>
            </value>
            <value>
                <fullName>OSM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>