force-app/main/default/objects/Account/fields/Yearly_Data_Volume__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Data_Volume__c</fullName>
    <inlineHelpText>Input a rough estimate of yearly data volume</inlineHelpText>
    <label>Yearly Data Volume</label>
    <length>200</length>
    <type>Text</type>
</CustomField>