force-app/main/default/objects/Account/recordTypes/NZC_Supplier.recordType-meta.xml
<RecordType>
    <fullName>NZC_Supplier</fullName>
    <active>true</active>
    <description>NZC Supplier Record</description>
    <label>NZC Supplier</label>
</RecordType>