force-app/main/default/objects/Account/validationRules/Billing_State_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_State_Required</fullName>
    <active>false</active>
    <description>The Billing Street, City, State, Postal Code, and Country are required fields.</description>
    <errorConditionFormula>AND(
Opportunity_at_Proposal_Stage__c = TRUE,
OR(
ISBLANK(BillingStreet),
ISBLANK(BillingCity),
ISBLANK(BillingState),
ISBLANK(BillingPostalCode),
ISBLANK(BillingCountry)
),
NOT(
OR(
ISCHANGED(Opportunity_Open__c),
ISCHANGED(Opportunities__c),
ISCHANGED(Opportunity_Closed_Lost__c),
ISCHANGED(Opportunity_Closed_Won__c),
ISCHANGED(Opportunity_Total__c)
)
)
)</errorConditionFormula>
    <errorMessage>Billing Street, City, State, Postal Code, and Country are required fields on the Account when a related Opportunity reaches Proposal Stage.</errorMessage>
</ValidationRule>