force-app/main/default/objects/Account/validationRules/Customer_Contact_Required_at_Proposal.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Contact_Required_at_Proposal</fullName>
    <active>false</active>
    <description>All Customer Contact fields on the Account are required when an Opportunity reaches proposal stage.</description>
    <errorConditionFormula>AND(
Opportunity_at_Proposal_Stage__c = TRUE,
NOT(RecordType.Name = &quot;Competitor&quot;),
NOT(RecordType.Name = &quot;Partner&quot;),
OR(
ISPICKVAL(Customer_Contact_Level__c,&quot;&quot;),
ISPICKVAL(Customer_Contact_Department__c,&quot;&quot;),
ISBLANK(Customer_Contact_Email__c),
ISBLANK(Customer_Contact_Name__c),
ISBLANK(Customer_Contact_Title_Designation__c)
)
)</errorConditionFormula>
    <errorMessage>All People Soft Customer Contact fields on the Account are required when an Opportunity reaches proposal stage.</errorMessage>
</ValidationRule>