force-app/main/default/objects/Account/validationRules/Fields_Required_At_Proposal.validationRule-meta.xml
<ValidationRule>
    <fullName>Fields_Required_At_Proposal</fullName>
    <active>false</active>
    <description>Validation rule to make Ownership, Vertical Market, and All customer contact fields required if a related opportunity is at proposal stage.</description>
    <errorConditionFormula>AND(
				Opportunity_at_Proposal_Stage__c = TRUE,
				NOT(RecordType.Name = &quot;Competitor&quot;),
				NOT(RecordType.Name = &quot;Partner&quot;),
				OR(
								ISPICKVAL(Vertical_Market__c, &quot;&quot;),
								ISPICKVAL(Ownership,&quot;&quot;),
								ISPICKVAL(Customer_Contact_Level__c,&quot;&quot;),
								ISPICKVAL(Customer_Contact_Department__c,&quot;&quot;),
								ISBLANK(Customer_Contact_Email__c),
								ISBLANK(Customer_Contact_Name__c),
								ISBLANK(Customer_Contact_Title_Designation__c)
								)
				)</errorConditionFormula>
    <errorMessage>Vertical Market, Ownership, and all Customer Contact Fields are required on the Account when an Opportunity reaches Proposal Stage.</errorMessage>
</ValidationRule>