force-app/main/default/objects/Account/validationRules/Lock_Account_Fields_WinZone.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Account_Fields_WinZone</fullName>
    <active>true</active>
    <description>validation rule to lock down fields that are permanently editable at the profile level. Fields locked because of WinZone sourced data.</description>
    <errorConditionFormula>AND(  
				OR(
								ISCHANGED( Name ), 
								ISCHANGED(RecordTypeId), 
								ISCHANGED(OwnerId)
				),
								NOT($Profile.Name = &quot;System Administrator&quot;))</errorConditionFormula>
    <errorMessage>Record Type, Owner, and Account Name cannot be edited. These fields are sourced from WinZone</errorMessage>
</ValidationRule>