force-app/main/default/objects/Account/validationRules/No_Known_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Known_Contact</fullName>
    <active>false</active>
    <errorConditionFormula>AND(No_Known_Contact__c = FALSE,
OR( Customer_Contact_Name__c = &quot;&quot;,
Customer_Contact_Email__c = &quot;&quot;,
Customer_Contact_Title_Designation__c = &quot;&quot;,
ISBLANK(TEXT(Customer_Contact_Level__c)),
ISBLANK(TEXT(Customer_Contact_Department__c))),
NOT(
OR(
ISCHANGED(Opportunity_Open__c),
ISCHANGED(Opportunities__c),
ISCHANGED(Opportunity_Closed_Lost__c),
ISCHANGED(Opportunity_Closed_Won__c),
ISCHANGED(Opportunity_Total__c))))</errorConditionFormula>
    <errorMessage>All Customer Contact Fields are required unless No Known Contact is marked as true</errorMessage>
</ValidationRule>