force-app/main/default/objects/Account/validationRules/Ownership_Field_at_Proposal_stage.validationRule-meta.xml
<ValidationRule>
    <fullName>Ownership_Field_at_Proposal_stage</fullName>
    <active>false</active>
    <description>Ownership is a required field when a related opportunity reaches proposal stage.</description>
    <errorConditionFormula>AND(
Opportunity_at_Proposal_Stage__c = TRUE,
NOT(RecordType.Name = &quot;Competitor&quot;),
NOT(RecordType.Name = &quot;Partner&quot;),
ISPICKVAL(Ownership,&quot;&quot;))</errorConditionFormula>
    <errorMessage>Ownership is a required field on the Account when a related Opportunity reaches proposal stage.</errorMessage>
</ValidationRule>